--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
    </head>
     <body>
     <header>
-        <img src="/img/header.webp" alt="Header" title="Restaurant header">
         <h1>Välkommen till BurgerOnline</h1>
+       
     </header>
     <main> 
         <section id="burgerinformation">
             <h2>Select burger</h2>
             <p>Välj din burgare</p>
-            <div>
-                <div class="burgarblock" style="display: inline-block"> 
+            <div class="wrapper">
+                <div class="box a"> 
                     <h3>Dunder burgare</h3>
                     <br>
-                    <img src="/img/burgare1.webp" alt="buragre 1" title="Burgare nummer 1" style="width: 300px;">
+                    <img src="/img/burgare1.webp" alt="buragre 1" title="Burgare nummer 1" >
                     <br>
                     <ul>
                         <li>Ost</li>
@@ -27,17 +27,17 @@
                         <li class="allergen">Innehåller gluten</li>
                     </ul>
                 </div>
-                <div class="burgarblock" style="display: inline-block"> 
+                <div class="box b"> 
                     <h3>Bara kött</h3><br>
-                    <img src="/img/burgarkött.jpg" alt="buragre 2" title="Burgare nummer 2" style="width: 300px;"><br>
+                    <img src="/img/burgarkött.jpg" alt="buragre 2" title="Burgare nummer 2" ><br>
                     <ul>
                         <li>Kött</li>
                         <li>Fryst</li>
                     </ul>
                 </div>
-                <div class="burgarblock" style="display: inline-block"> 
+                <div class="box c"> 
                     <h3>Fisk burgare</h3><br>
-                    <img src="/img/fiskburgare.jpg" alt="buragre 3" title="Burgare nummer 3" style="width: 300px;"><br>
+                    <img src="/img/fiskburgare.jpg" alt="buragre 3" title="Burgare nummer 3" ><br>
                     <ul>
                         <li>Fisk</li>
                         <li>Grönsaker</li>
